# rust-ray-tracer

./: .gitignore  Cargo.toml  README.md  image.ppm
assets/: default.gltf  susanne.gltf  suzanne.gltf
assets/MetalRoughSpheres/: MetalRoughSpheres.gltf
src/: aabb.rs  camera.rs  gltf.rs  main.rs  material.rs  pdf.rs  ray.rs  scene.rs  texture.rs  vec3.rs
src/bvh/: aabb.rs  mod.rs
src/geometry/: aarect.rs  constant_medium.rs  cuboid.rs  mod.rs  sphere.rs  transform.rs  triangle.rs
src/material/: mod.rs  pbr.rs  perlin.rs  texture.rs
