[package]
name = "rust-ray-tracer"
version = "0.1.0"
authors = ["safarte <bchichereau@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
image = "0.23.14"
rayon = "1.0.3"
indicatif = "0.16.2"
clap = { version = "~2.33.3", features = ["yaml"] }
nalgebra-glm = "0.11.0"
serde = "1.0.130"
serde_json = "1.0.68"
base64 = "0.13.0"
